2008-05-08  Carlos Alberto Cortez <calebrto.cortez@gmail.com>

	* FileDialog.cs: When the user types a wildcard character in the
	filename combobox, update the contents of the folder using the text as
	a filter.
	Fixes part of #385261.

2008-05-08  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: Various fixes for MultiColumn listboxen.
	[Fixes bug #388114]

2008-05-08  Andreia Gaita <avidigal@novell.com> 

	* HtmlElement.cs: Implement Style property

2008-05-08  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: Respect checkboxes when measuring item size.
	* ThemeWin32Classis.cs: When drawing list items, don't draw
	text outside of the item's bounds to prevent overlapping.
	(.Net actually overlaps, but that's just silly.)
	[Fixes bug #388117]

2008-05-08  Everaldo Canuto  <ecanuto@novell.com>

	* NotifyIcon.cs: Call SetForegroundWindow before show context menu. Thanks
	Gert Driesen. Fixes bug #324830. 

2008-05-07  Everaldo Canuto  <ecanuto@novell.com>

	* XplatUI.cs, XplatUIDriver.cs, XplatUIWin32.cs: SetForegroundWindow
	method implemented.

2008-05-07  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSource.cs: When calling IsSynchronized, return the value of
	the related IList list.

2008-05-07  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBindingHelper.cs: Fix some bits in GetListItemProperties, to
	make a test pass.

2008-05-07  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridView.cs: Implement PageUp/PageDown keys.  Extend keyboard
	navigation to scroll the grid if the current cell is not visible.

2008-05-07  Andreia Gaita <avidigal@novell.com> 

	* HtmlElement.cs: Implement TabIndex

2008-05-07  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: Respect ScrollAlwaysVisible and HorizontalScrollbar
	properties, even when there are no items.
	[Fixes bug #387611]

2008-05-07  Ivan N. Zlatev  <contact@i-nz.net>

	* NativeWindow.cs: Add support for multiple handles per window.